# sandpiper

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  get_tickets.py  pyproject.toml  release-please-config.json  test_install.sh
.claude/: settings.local.json
.claude/agents/: dev-workflow.md  github-agent.md  test-engineer.md
.claude/commands/: create-pr.md  develop.md  test-and-fix.md
.claude/skills/python-modern/: SKILL.md
.claude/skills/security-patterns/: SKILL.md
.claude/skills/uv-workflow/: SKILL.md
.github/: GITHUB_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release-please.yml
docs/: cli-agent-commands.md
sample/: create-notion-pages.json
scripts/: cron-runner.sh
src/sandpiper/: __init__.py  api.py  main.py  mcp_server.py
src/sandpiper/app/: app.py  message_dispatcher.py
src/sandpiper/app/handlers/: __init__.py  create_tomorrow_todo_list_handler.py  handle_special_todo.py  special_todo_handler.py
src/sandpiper/calendar/application/: create_calendar_event.py  delete_calendar_events.py
src/sandpiper/calendar/domain/: calendar_event.py  calendar_repository.py
src/sandpiper/calendar/infrastructure/: notion_calendar_repository.py
src/sandpiper/clips/: __init__.py
src/sandpiper/clips/application/: __init__.py  create_clip.py  list_unprocessed_clips.py
src/sandpiper/clips/domain/: __init__.py  clip.py  clips_repository.py
src/sandpiper/clips/infrastructure/: __init__.py  notion_clips_repository.py
src/sandpiper/clips/query/: clips_query.py  unprocessed_clip_item.py
src/sandpiper/obsidian/application/: list_obsidian_notes.py
src/sandpiper/obsidian/query/: obsidian_note_item.py  obsidian_query.py
src/sandpiper/perform/application/: complete_todo.py  delete_todo.py  handle_special_todo.py  handle_todo_created.py  handle_todo_start_event.py  handle_todo_started.py  handler_todo_started.py  mark_done.py  mark_remaining_todos_as_today.py  override_section_by_schedule.py  schedule_task_end_notification.py  start_todo.py
src/sandpiper/perform/domain/: todo.py  todo_repository.py
src/sandpiper/perform/infrastructure/: notion_todo_repository.py  todo_query.py
src/sandpiper/perform/query/: incidental_task_query.py
src/sandpiper/plan/application/: archive_deleted_pages.py  cleanup_project_tasks.py  convert_to_project.py  create_project.py  create_project_task.py  create_repeat_project_task.py  create_repeat_task.py  create_schedule_tasks.py  create_someday_item.py  create_tasks_by_someday_list.py  create_todo.py  handle_completed_task.py  prepare_tomorrow_todos.py  sync_jira_to_project.py
src/sandpiper/plan/domain/: next_todo_rule.py  project.py  project_repository.py  project_task.py  project_task_repository.py  project_task_rule.py  routine.py  routine_cycle.py  routine_repository.py  someday_item.py  someday_repository.py  todo.py  todo_repository.py
src/sandpiper/plan/infrastructure/: notion_project_repository.py  notion_project_task_repository.py  notion_routine_repository.py  notion_someday_repository.py  notion_todo_repository.py
src/sandpiper/plan/query/: __init__.py  calendar_event_query.py  jira_ticket_dto.py  jira_ticket_query.py  project_task_dto.py  project_task_query.py  project_task_rule.py  routine_dto.py  routine_query.py  todo_query.py
src/sandpiper/recipe/application/: create_recipe.py
src/sandpiper/recipe/domain/: recipe.py  recipe_repository.py  shopping_repository.py
src/sandpiper/recipe/infrastructure/: notion_recipe_repository.py  notion_shopping_repository.py
src/sandpiper/review/application/: get_github_activity.py  get_todo_log.py
src/sandpiper/review/query/: activity_log_item.py  calendar_query.py  done_todo_dto.py  github_activity_dto.py  github_activity_query.py  todo_query.py
src/sandpiper/routers/: __init__.py  embed.py  health.py  maintenance.py  notion.py  recipe.py
src/sandpiper/routers/dependency/: deps.py  verify_authorization.py
src/sandpiper/templates/: base.html  embed_todo.html  recipe_form.html
tests/: test_async_option.py  test_calendar_api.py  test_check_dakoku.py  test_create_clip_command.py  test_create_notion_pages_command.py  test_cron_notify.py  test_list_unprocessed_clips_command.py  test_main.py  test_mcp_server.py  test_project_commands.py  test_project_task_commands.py  test_todo_commands.py  test_utils.py
tests/app/: test_message_dispatcher.py
tests/calendar/: test_create_calendar_event.py
tests/clips/application/: test_create_clip.py  test_list_unprocessed_clips.py
tests/perform/application/: test_complete_todo.py  test_handle_todo_created.py  test_handle_todo_started.py  test_mark_done.py  test_mark_remaining_todos_as_today.py  test_override_section_by_schedule.py  test_schedule_task_end_notification.py  test_start_todo.py
tests/perform/domain/: test_todo.py
tests/plan/application/: test_archive_deleted_pages.py  test_cleanup_project_tasks.py  test_convert_to_project.py  test_create_project.py  test_create_project_task.py  test_create_repeat_project_task.py  test_create_schedule_tasks.py  test_create_someday_item.py  test_create_tasks_by_someday_list.py  test_create_todo.py  test_prepare_tomorrow_todos.py  test_sync_jira_to_project.py
tests/plan/domain/: __init__.py  test_next_todo_rule.py  test_project.py  test_project_task.py  test_routine.py  test_routine_cycle.py  test_routine_cycle_utils.py  test_someday_item.py
tests/plan/query/: test_jira_ticket_query.py  test_project_task_dto.py
tests/recipe/application/: test_create_recipe.py
tests/recipe/domain/: test_recipe.py
tests/review/application/: test_get_todo_log.py
tests/review/query/: test_todo_query.py
tests/shared/infrastructure/: test_archive_deleted_pages.py  test_archive_old_todos.py  test_event_bus.py  test_notion_commentator.py  test_slack_channel_reader.py  test_slack_notice_messanger.py  test_youtube_client.py
tests/shared/notion/: test_block_service.py  test_notion_props.py
tests/shared/utils/: test_date_utils.py
tests/shared/valueobject/: test_task_chute_section.py
(+45 files in other folders)
