[project]
name = "sandpiper"
version = "0.5.0"
description = "2026年の最新Python開発テンプレート"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["template", "python", "modern"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "lotion>=0.9.4",
    "notion-client==2.2.1",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "slack-sdk>=3.39.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.urls]
Homepage = "https://github.com/username/sandpiper"
Repository = "https://github.com/username/sandpiper"
Documentation = "https://username.github.io/sandpiper"
Issues = "https://github.com/username/sandpiper/issues"

[project.scripts]
sandpiper = "sandpiper.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff設定 - 2026年の最新設定
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.lint.isort]
known-first-party = ["sandpiper"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF001"]  # Allow ambiguous unicode characters in test data

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest設定
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/sandpiper",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# MyPy設定
[tool.mypy]
python_version = "3.12"
files = ["src/sandpiper"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["misc"]

# Coverage設定
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    # API・エンドポイント層(統合テストでカバー)
    "src/sandpiper/api.py",
    "src/sandpiper/routers/*",
    # CLI エントリーポイント(統合テストでカバー)
    "src/sandpiper/main.py",
    # インフラストラクチャ層(外部依存・統合テストでカバー)
    "src/sandpiper/**/notion_*_repository.py",
    "src/sandpiper/shared/infrastructure/github_client.py",
    "src/sandpiper/review/query/github_activity_query.py",
    "src/sandpiper/plan/query/project_task_query.py",
    # 設定・初期化ファイル
    "src/sandpiper/routers/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

# Release Please設定
[tool.release-please]
package-name = "sandpiper"
include-component-in-tag = false
